# serializer version: 1
# name: test_create[paired]
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
    ]),
    'id': '9pfsom1b',
    'key': 'aodp-abcdefgh',
    'legacy': False,
    'missing': False,
    'paired': True,
    'ready': False,
    'sample': dict({
      'id': 'foo',
    }),
  })
# ---
# name: test_create[paired].1
  dict({
    '_id': '9pfsom1b',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
    ]),
    'key': 'aodp-abcdefgh',
    'legacy': False,
    'missing': False,
    'paired': True,
    'ready': False,
    'sample': dict({
      'id': 'foo',
    }),
  })
# ---
# name: test_create[unpaired]
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
    ]),
    'id': '9pfsom1b',
    'key': 'aodp-abcdefgh',
    'legacy': False,
    'missing': False,
    'paired': False,
    'ready': False,
    'sample': dict({
      'id': 'foo',
    }),
  })
# ---
# name: test_create[unpaired].1
  dict({
    '_id': '9pfsom1b',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
    ]),
    'key': 'aodp-abcdefgh',
    'legacy': False,
    'missing': False,
    'paired': False,
    'ready': False,
    'sample': dict({
      'id': 'foo',
    }),
  })
# ---
# name: test_create_duplicate
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
    ]),
    'id': 'u3cuwaoq',
    'key': 'aodp-abcdefgh',
    'legacy': False,
    'missing': False,
    'paired': False,
    'ready': False,
    'sample': dict({
      'id': 'foo',
    }),
  })
# ---
# name: test_create_duplicate.1
  dict({
    '_id': 'u3cuwaoq',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': list([
    ]),
    'key': 'aodp-abcdefgh',
    'legacy': False,
    'missing': False,
    'paired': False,
    'ready': False,
    'sample': dict({
      'id': 'foo',
    }),
  })
# ---
